[UPBE-275] added logic for another member already onboarding